[project]
name = "analyzelblogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.43",
    "dotenv>=0.9.9",
    "fastparquet>=2025.12.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
]
